--- a/styleguide/patterns/02-layouts/l-teaser/_l-teaser.scss
+++ b/styleguide/patterns/02-layouts/l-teaser/_l-teaser.scss
@@ -19,8 +19,11 @@
       justify-content: center;
     }
 
-    &--reverse {
+    &--light {
       background-color: #fff;
+    }
+
+    &--reverse {
       flex-direction: row-reverse;
     }
   }
